Almost finished with everything

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>quote</title>
+  <title>weather</title>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,11 +17,20 @@
 <body>
   <div class="container-fluid text-center">
   <h1>Weather App</h1>
-  <div class="space"></div>
-  <div id="message">Test</div>
-  <div class="space"></div>
+  <!-- <div class="space"></div> -->
   <button id="fah" class="btn btn-info active">F</button>
   <button id="cel" class="btn btn-default">C</button>
+  <div class="space"></div>
+  <div id="city" class="lead">London is currently</div>
+  <div id="temp" class="lead curTemp">72˚</div>
+  <div class="lead row">
+    <div class="col-xs-2"></div>
+    <div class="col-xs-2"></div>
+    <div class="col-xs-2"></div>
+    <div class="col-xs-2"></div>
+    <div class="col-xs-2"></div>
+    <div class="col-xs-2"></div>
+  </div>
 </div>
 <!-- Bootstrap core JavaScript
 ================================================== -->
