--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <button id="fah" class="btn btn-info active">F</button>
   <button id="cel" class="btn btn-default">C</button>
   <div class="space"></div>
-  <div id="city" class="lead"></div>
-  <div id="temp" class="lead curTemp"></div>
+  <div id="city" class="lead">I don't know the weather becauase I can't see your location</div>
+  <div id="temp" class="lead curTemp">:(</div>
   <div class="lead row">
     <div class="col-xs-2"></div>
     <div class="col-xs-2"></div>
