--- a/index.html
+++ b/index.html
@@ -16,22 +16,17 @@
 </head>
 <body>
   <div class="container-fluid text-center">
-  <h1>Weather App</h1>
-  <!-- <div class="space"></div> -->
-  <button id="fah" class="btn btn-info active">F</button>
-  <button id="cel" class="btn btn-default">C</button>
-  <div class="space"></div>
-  <div id="city" class="lead">I don't know the weather because I can't see your location</div>
-  <div id="temp" class="lead curTemp">:(</div>
-  <div class="lead row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2"></div>
-    <div class="col-xs-2"></div>
+    <div class="card">
+      <div class="cardBorder">
+        <h1>Weather App</h1>
+        <button id="fah" class="btn btn-info active">F</button>
+        <button id="cel" class="btn btn-default">C</button>
+        <div class="space"></div>
+        <div id="city" class="lead">I don't know the weather because I can't see your location</div>
+        <div id="temp" class="lead curTemp">:(</div>
+      </div>
+    </div>
   </div>
-</div>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
