--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="card">
       <div class="cardBorder">
         <h1>Weather App</h1>
-        <button id="fah" class="btn btn-info active">F</button>
+        <button id="fah" class="btn btn-default active">F</button>
         <button id="cel" class="btn btn-default">C</button>
         <div class="space"></div>
         <div id="city" class="lead">I don't know the weather because I can't see your location</div>
